--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE HTML>
 <HTML>
     <HEAD>
-        <title>Module 2 Coding Assignment!</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Assignment Solution for Module 2</title>
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </HEAD>
     <body>
-        <h1>Module 2 Coding Assignment!</h1>
+        <h1>Our Menu</h1>
+        <div class="menu-item menu-item-mobile menu-item-tablet menu-item-desktop">
+                <div class="menu-header chicken">Chicken</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="menu-item menu-item-mobile menu-item-tablet menu-item-desktop">
+                <div class="menu-header beef">Beef</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="menu-item menu-item-mobile menu-item-tablet menu-item-desktop sushi-menu-item">
+                <div class="menu-header sushi">Sushi</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
     </body>
 </HTML>
